--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "JFM-LED",
   "private": true,
   "dependencies": {
+    "@rails/webpacker": "^3.3.1",
     "react-on-rails": "^10.1.3"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "2.11.2"
   }
 }
