--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-on-rails": "^10.1.3"
+    "react-on-rails": "^10.1.3",
+    "reactjs-popup": "^1.0.5"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
