--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-on-rails": "^10.1.3",
-    "reactjs-popup": "^1.0.5"
+    "reactjs-popup": "^1.0.5",
+    "stimulus": "^1.0.1",
+    "tiny-script-loader": "^2.0.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
